--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ author:
 
 # Add links to the sidebar.
 menu:
-  - title:             Example
+  - title:             All Posts
     url:               /example/
   - title:             Documentation
     url:               /docs/
