--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ description:           >
   with a focus on personal sites that are meant to impress.
 
 # A shorter description for the sidebar.
-tagline:               Change `tagline` in `_config.yml`
+tagline:               코딩 공부하는 학생입니다.
 
 # A list of keywords for your blog
 keywords:              []
