--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,17 +2,14 @@
 # Must be the same as `author` in `_config.yml`.
 # Change `author1` to your shortname.
 author1:
-  name:              <firstname> <lastname>
-  email:             <mail@domain.tld>
+  name:              <Seo> <Inyhoung>
+  email:             <dlsdud9098@naver.com>
 
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    
-    Open `_data/authors.yml` to edit this text.
+    코딩 공부하고 있는 학생입니다.
+    데이터 분석, 머신러닝/딥러닝을 주로 하고 있습니다.
 
   # This photo will be used in the about section
   picture:
@@ -28,7 +25,7 @@ author1:
   # You can also provide an absolute URL (starting with https://) instead of usernames
   social:
     twitter:         <username>
-    github:          <username>
+    github:          <dlsdud9098>
     # email:           <mail@domain.tld>
     # rss:             https://<url>/feed.xml
     # facebook:        <username>
@@ -83,15 +80,12 @@ author1:
 
 # Another author (optional)
 author2:
-  name:              <firtname> <lastname>
-  email:             <mail@domain.tld>
+  name:              <Seo> <Inyhoung>
+  email:             <dlsdud9098@naver.com>
   about:             |
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-
-    Open `_data/authors.yml` to edit this text.
+    코딩 공부하고 있는 학생입니다.
+    데이터 분석, 머신러닝/딥러닝을 주로 하고 있습니다.
 
   picture:           https://placehold.it/128x128
   twitter:           <username>
-  github:            <username>
+  github:            <dlsdud9098>
