--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -9,6 +9,7 @@ author1:
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
     코딩 공부하고 있는 학생입니다.
+
     데이터 분석, 머신러닝/딥러닝을 주로 하고 있습니다.
 
   # This photo will be used in the about section
@@ -24,9 +25,9 @@ author1:
   # Rearrange to change the order in which they appear
   # You can also provide an absolute URL (starting with https://) instead of usernames
   social:
-    twitter:         <username>
+    # twitter:         <username>
     github:          <dlsdud9098>
-    # email:           <mail@domain.tld>
+    email:           <dlsdud9098@naver.com>
     # rss:             https://<url>/feed.xml
     # facebook:        <username>
     # google:          <number>
@@ -84,8 +85,10 @@ author2:
   email:             <dlsdud9098@naver.com>
   about:             |
     코딩 공부하고 있는 학생입니다.
+
     데이터 분석, 머신러닝/딥러닝을 주로 하고 있습니다.
 
   picture:           https://placehold.it/128x128
-  twitter:           <username>
+  # twitter:           <username>
   github:            <dlsdud9098>
+  email:             <dlsdud9098@naver.com>
