--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,8 +2,8 @@
 # Must be the same as `author` in `_config.yml`.
 # Change `author1` to your shortname.
 author1:
-  name:              <Seo> <Inyhoung>
-  email:             <dlsdud9098@naver.com>
+  name:              Seo Inyoung
+  email:             dlsdud9098@naver.com
 
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
@@ -81,8 +81,8 @@ author1:
 
 # Another author (optional)
 author2:
-  name:              <Seo> <Inyhoung>
-  email:             <dlsdud9098@naver.com>
+  name:              Seo Inyoung
+  email:             dlsdud9098@naver.com
   about:             |
     코딩 공부하고 있는 학생입니다.
 
