--- a/_data/social.yml
+++ b/_data/social.yml
@@ -112,7 +112,7 @@ ondrive:
 github:
   name: GitHub
   icon: icon-github
-  prepend: "https://github.com/dlsdud9098"
+  prepend: "https://github.com/"
 npm:
   name: npm
   icon: icon-npm
