--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ remote_theme: hydecorp/hydejack@v9
  
 # Sidebar image and theme color of the site.
 accent_image:          
-  background:          center / cover url(/assets/img/back.jpg)
+  background:          center / cover url(/assets/img/back4.jpg)
   overlay:             false
 accent_color:          rgb(79,177,186)
 
